fix the fixed header overlapping the anthors

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -92,8 +92,14 @@ main{
         position:fixed;
     }
 }
+.anchor {       /* move anchor up */
+    display: block;
+    position: relative;
+    top: -60px;
+    visibility: hidden;
+}
 
-/* site title */
+/* favicon beside site title */
 .favicon{
     margin-right:8px;
     vertical-align:middle;
